# blazingai

./: .gitignore  README.md  makefile  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yaml
blazingai/: io.py  kaggle.py  learner.py  loss.py  metrics.py  optim.py  params.py  recipes.py  utils.py
blazingai/tabular/: augmentations.py  model_selection.py
blazingai/text/: data.py  reinitialize.py
blazingai/vision/: boxes.py  convert.py  data.py  transform.py  utils.py
blazingml/tabular/: augmentations.py
blazingml/vision/: data.py  utils.py
src/: setup.py
src/ml/: io.py  learner.py  metrics.py  optim.py
src/ml/tabular/: model_selection.py
src/ml/vision/: convert.py  data.py  utils.py
src/tests/: test_convert_images.py  test_io.py
src/tests/data/: 1.dcm
tests/: test_convert_images.py  test_io.py  test_kaggle.py  test_metrics.py
