[tool.poetry]
name = "blazingai"
version = "2.0.0"
description = "A framework to accelerate AI development"
authors = ["Gianluca Rossi <gr.gianlucarossi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
scipy = "^1.9.3"
loguru = "^0.6.0"
omegaconf = "^2.2.3"
scikit-learn = "^1.1.3"
timm = "^0.6.11"
torchmetrics = "^0.10.3"
tqdm = "^4.64.1"
transformers = "^4.24.0"
pandas = "^1.5.1"
lightning = "^1.8.3.post1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
ipdb = "^0.13.9"
mypy = "^0.991"
black = "^22.10.0"
usort = "^1.0.5"

[tool.poetry.group.medical.dependencies]
pydicom = "^2.3.1"
pylibjpeg = "^1.4.0"
pylibjpeg-libjpeg = "^1.3.2"
pylibjpeg-openjpeg = "^1.2.1"

[tool.black]
# line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
