[project]
name = "blazingai"
version = "2.0.0"
description = "A framework to accelerate AI development"
authors = [{name= "Gianluca Rossi" , email= "gr.gianlucarossi@gmail.com" }]
requires-python = ">=3.9"
license = {file = "LICENSE"}
readme = "README.md"
dependencies = [
  "datasets>=2.7.1",
  "lightning>=2.2.0",
  "loguru>=0.6.0",
  "matplotlib",
  "numpy",
  "omegaconf>=2.2.3",
  "pandas>=1.5.1",
  "scikit-learn>=1.1.3",
  "scipy>=1.9.3",
  "sentencepiece>=0.1.97",
  "timm>=0.6.11",
  "torch",
  "torchmetrics>=0.10.3",
  "tqdm>=4.64.1",
  "transformers>=4.24.0",
]

[project.optional-dependencies]
dev = [
  "ruff",
  "pytest",
  "pytest-cov",
  "ipdb",
  "mypy",
  "pynvim", # required for nvim lsp
]
medical = [
  "pydicom>=2.3.1",
  "pylibjpeg>=1.4.0",
  "pylibjpeg-libjpeg>=1.3.2",
  "pylibjpeg-openjpeg>=1.2.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
  "*.egg-info",
  ".*",
  "blazingai",
  "build",
  "dist",
]
markers = ["slow"]

[tool.ruff]
extend-include = ["*.ipynb"]
lint.extend-select = ["I"]
lint.extend-ignore = ["E741"]

[tool.basedpyright]
typeCheckingMode = "standard"
